Mon Jan  7 15:16:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/WB26ProjectCreator.pm:
        * modules/WB26WorkspaceCreator.pm:
        * templates/wb26.mpd:
          First initial commit for a new generator for VxWorks 6.4/Workbench 2.6.
          A lot of more work has to be done on this generator before it is
          complete, but this is the first starting point. Because the Workbench
          has the restriction that the project file always has to be named
          .project for each project in a directory we create a subdirectory
          and in this directory we place the .project file. Then for each
          source file we use the linked file feature of the workbench. This
          has the current restriction that it must be a full path, no relative
          paths are supported.

        * docs/MPC.sgml:
        * docs/USAGE:
          Added missing vc9 and new wb26

Mon Jan  7 14:59:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/.cvsignore:
          Removed, we are not using cvs anymore

Mon Jan  7 14:57:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * registry.pl:
          Added vc9

Tue Dec 18 20:21:28 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/mpich.mpb:

          Added a requires statement to the base project.

Thu Dec 13 16:48:51 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/mpich.mpb:

          The import libraries on Windows are different than the
          libraries on non-Windows systems.

Wed Dec 12 02:03:59 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/mpich.mpb:

          Base project that will set the necessary project settings
          for using MPICH, a freely available implementation of the
          Message Passing Interface (MPI).

Tue Dec 11 21:36:44 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/odbc.mpb:
