@@ -1,3 +1,13 @@
+Wed Jan  9 09:10:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * templates/wb26wrproject.mpd:
+          New file, first version of the generator of the .wrproject file
+          needed for the WindRiver workbench
+
+        * modules/WB26ProjectCreator.pm:
+          Overruled get_template so that we easily can enable the
+          wb26wrproject file
+
 Mon Jan  7 15:16:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * modules/WB26ProjectCreator.pm:
